# OpenGL-Basic-Renderer

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
res/shaders/: Basic.shader
src/: CMakeLists.txt  IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBufferLayout.cpp  VertexBufferLayout.h  dynamic_list.h  main.cpp
src/BufferObjects/: IndexBuffer.cpp  IndexBuffer.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h
src/res/: Shader.cpp  Shader.h
src/res/shaders/: Basic.shader
